syntax = "proto3";

option java_multiple_files = true;
option java_package = "goapiboilerplate.grpc.auth";
option java_outer_classname = "AuthProto";

package proto;

import "google/protobuf/empty.proto";

// AuthenticationService handles auth token verification
service AuthenticationService {
  rpc ValidationBearerToken (ValidationBearerTokenRequest) returns (google.protobuf.Empty);
  rpc DispatchClientCommand (DispatchAuthCommandRequest) returns (google.protobuf.Empty);
  rpc DispatchTokenCommand (DispatchAuthCommandRequest) returns (google.protobuf.Empty);
}

// ValidationBearerTokenRequest validates auth token
message ValidationBearerTokenRequest {
  string token = 1;
}

// DispatchAuthCommandRequest is passed when dispatching
message DispatchAuthCommandRequest {
  string name = 1;
  bytes payload = 2;
}
